--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Mass Project</title>
+    <title>Protocol Meet</title>
   </head>
   <body>
     <div id="root"></div>
